--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
 <html lang="En">
 <head>
     <meta charset="UTF-8"/>
+    <link rel="stylesheet" href="index.css">
     <link href="assets/fav.ico" rel="icon">
     <title>Tiny Graphics</title>
 </head>
 <body style="background: White">
 <!-- Begin typing your web page here. -->
 <!-- The following code embeds a WebGL canvas panel, loads certain scene(s), and displays panel(s) of their controls.-->
-<div class="canvas-widget" id="main-canvas"></div>
+<div class="canvas">
+  <canvas id="canvas"></canvas>
+  <div id="overlay">
+    <div>Score: <span id="score"></span></div>
+  </div>
+</div>
+<div class="canvas-widget" id="main-canvas">
+</div>
 <script type=module>
     // ********************* THE ENTRY POINT OF YOUR WHOLE PROGRAM STARTS HERE *********************
     // Indicate which element on the page you want the Canvas_Widget to replace with a 3D WebGL area:
