--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- The following code embeds a WebGL canvas panel, loads certain scene(s), and displays panel(s) of their controls.-->
 <div class="canvas-widget" id="main-canvas">
   <div id="overlay">
-    <div>Score: <span id="score"></span></div>
+    <div><span id="score"></span></div>
   </div>
 </div>
 <script type=module>
